# Conway

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: python-ci.yaml
.uv/: config.toml
docs/: conway.html  index.html  search.js
docs/conway/: console.html  core.html  raylib.html
scripts/: black.bat  doc.bat  mypy.bat  precom.bat  test.bat
src/conway/: __init__.py  console.py  core.py  raylib.py
tests/: conftest.py  test_core.py
tests/unit/: test_core.py
