[project]
name = "conway"
version = "0.1.0"
description = "Conway's Game of Life"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.12.0",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "conway",
    "mypy>=1.19.0",
    "pdoc>=16.0.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
]

[tool.mypy]
namespace_packages = true
explicit_package_bases = true

[tool.uv.sources]
conway = { workspace = true }
